--- a/Estimating_quality.ipynb
+++ b/Estimating_quality.ipynb
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "\n",
     "# Results presentation\n",
-    "from tqdm import tqdm_notebook as tqdm\n",
+    "from tqdm.notebook import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# NN related stuff\n",
@@ -436,7 +436,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -450,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
